Reverts workaround for Jetty12 migration and JPMS issues. Implements new wrapper for ServletRequests as a replacement.