@@ -17,7 +17,7 @@ JAVA=`which java`
 LATEST=`ls target/structr-*.jar | grep -v 'sources.jar' | grep -v 'javadoc.jar' | sort | tail -1`
 VERSION=${LATEST#target/structr-};VERSION=${VERSION%%.jar}
 
-STRUCTR="-Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -Djava.net.preferIPv6Addresses=false -Duser.timezone=Europe/Berlin -Duser.country=US -Duser.language=en -Djava.util.logging.config.file=logging.properties.debug -Dorg.apache.sshd.registerBouncyCastle=false -Dorg.neo4j.io.pagecache.implSingleFilePageSwapper.channelStripePower=0 --module-path ./target/lib -cp ./target/lib-classpath/*:./plugins/*:$LATEST --add-modules ALL-MODULE-PATH --add-opens org.eclipse.jetty.ee10.servlet/org.eclipse.jetty.ee10.servlet=structr.base --enable-native-access=org.graalvm.truffle -m structr.base/org.structr.Server"
+STRUCTR="-Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -Djava.net.preferIPv6Addresses=false -Duser.timezone=Europe/Berlin -Duser.country=US -Duser.language=en -Djava.util.logging.config.file=logging.properties.debug -Dorg.apache.sshd.registerBouncyCastle=false -Dorg.neo4j.io.pagecache.implSingleFilePageSwapper.channelStripePower=0 --module-path ./target/lib -cp ./target/lib-classpath/*:./plugins/*:$LATEST --add-modules ALL-MODULE-PATH --enable-native-access=org.graalvm.truffle -m structr.base/org.structr.Server"
 STRUCTR_ARGS="-server -Xms${HEAPSIZE}g -Xmx${HEAPSIZE}g -XX:+UseNUMA -XX:+UseG1GC -XX:+UseCodeCacheFlushing -Dinstance=$NAME"
 
 PIDFILE=$BASE_DIR/structr-$NAME.pid
